// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component Should have card classname 1`] = `
<div
  className="card"
  style={Object {}}
>
  Card Content
</div>
`;

exports[`Card component Should have card-content classname 1`] = `
<div
  className="card-content"
  style={Object {}}
>
  Content
</div>
`;

exports[`Card component Should have card-footer's classname 1`] = `
<div
  className="card"
  style={Object {}}
>
  <div
    className="card-footer"
    style={Object {}}
  >
    <div
      className="card-footer-item"
      style={Object {}}
    >
      Yes
    </div>
    <div
      className="card-footer-item"
      style={Object {}}
    >
      No
    </div>
  </div>
</div>
`;

exports[`Card component Should have card-header's classname 1`] = `
<div
  className="card"
  style={Object {}}
>
  <div
    className="card-header"
    style={Object {}}
  >
    <div
      className="card-header-title"
      style={Object {}}
    >
      Title
    </div>
    <div
      className="card-header-icon"
      style={Object {}}
    >
      <i
        className="icon"
      />
    </div>
  </div>
</div>
`;

exports[`Card component Should have card-image classname 1`] = `
<div
  className="card-image"
  style={Object {}}
>
  <figure
    className="image is-4by3"
    style={Object {}}
  >
    <img
      alt=""
      className=""
      onError={[Function]}
      src="http://bulma.io/images/placeholders/1280x960.png"
    />
  </figure>
</div>
`;
